# amd-cpuid

./: README.md  pyproject.toml
.github/workflows/: build.yml  codeql.yml  scorecard.yml
src/amd_cpuid/: __init__.py  cli.py  cpuid.py  microarchitecture.py  name.py
tests/: test_cpuid.py
